<resources>
    <string name="app_name">Challenge PokeApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_login_title">PokeApi</string>
    <string name="hint_email">E-mail:</string>
    <string name="hint_password">Password:</string>
    <string name="text_enter">Iniciar Sesión</string>
    <string name="msg_error">An error ocurred</string>
    <string name="lbl_your_welcome">¡Hola! Bienvenid@ \n Nos  encanta Tenerte aquí</string>
    <string name="msg_empty_field">ingrese sus datos para continuar</string>
    <string name="lbl_height">Altura:</string>
    <string name="lbl_weight">Peso:</string>
    <string name="lbl_characteristic">Característica:</string>
    <string name="lbl_previusr">anterior</string>
    <string name="lbl_next">siguiente</string>
    <string name="lbl_sign_out">Cerrar Sesión</string>
</resources>