<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.views.HomeFragment">



    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_4dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_20dp"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginEnd="@dimen/space_25dp"
        android:text="@string/lbl_your_welcome"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/lbl_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tvPrevius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/lbl_previusr"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0dp"
        android:clipToPadding="false"
        tools:listitem="@layout/fragment_home_item_pokemon"
        android:layout_marginTop="@dimen/space_25dp"
        android:layout_marginBottom="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_10dp"
        android:layout_marginEnd="@dimen/space_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>