<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/space_8dp"
    android:id="@+id/container_detail_screen"
    tools:context=".ui.detailhome.views.DetailPokemonBottomSheet">

    <ImageView
        android:id="@+id/img_pokemon"
        tools:background="@drawable/img_background"
        android:layout_width="@dimen/space_220dp"
        android:layout_height="@dimen/space_220dp"
        android:layout_marginTop="@dimen/space_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/space_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_25dp"
        android:layout_marginEnd="@dimen/space_25dp"
        android:padding="@dimen/space_4dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_18sp"
        android:maxLines="@integer/lines_2"
        app:layout_constraintStart_toStartOf="@id/img_pokemon"
        app:layout_constraintEnd_toEndOf="@id/img_pokemon"
        app:layout_constraintTop_toBottomOf="@id/img_pokemon"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/lbl_height"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_20dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_16sp"
        android:maxLines="@integer/min_lines"
        android:text="@string/lbl_height"
        app:layout_constraintStart_toStartOf="@id/img_pokemon"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>
    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_20dp"
        android:layout_marginStart="@dimen/space_4dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_16sp"
        android:maxLines="@integer/min_lines"
        app:layout_constraintStart_toEndOf="@id/lbl_height"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        />

    <TextView
        android:id="@+id/lbl_weight"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_10dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_16sp"
        android:maxLines="@integer/min_lines"
        android:text="@string/lbl_weight"
        app:layout_constraintStart_toStartOf="@id/img_pokemon"
        app:layout_constraintTop_toBottomOf="@id/lbl_height" />
    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_4dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_16sp"
        android:maxLines="@integer/min_lines"
        app:layout_constraintStart_toEndOf="@id/lbl_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_height"
        />

    <TextView
        android:id="@+id/lbl_characteristic"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_10dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_16sp"
        android:maxLines="@integer/min_lines"
        android:text="@string/lbl_characteristic"
        app:layout_constraintStart_toStartOf="@id/img_pokemon"
        app:layout_constraintTop_toBottomOf="@id/lbl_weight"
        />
    <TextView
        android:id="@+id/tv_characteristic"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginStart="@dimen/space_4dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toEndOf="@id/lbl_characteristic"
        app:layout_constraintTop_toBottomOf="@id/tv_weight"
        />

</androidx.constraintlayout.widget.ConstraintLayout>